@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2007-12-304  Warren L. DeLano <warren@delsci.com>	
+
+	* cartoon_ring_mode can now be set per-atom (per-residue, really)
+		
 2007-11-30  Warren L. DeLano <warren@delsci.com>	
 
 	* ANISOU records now supported in PDB files
